--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   build-and-test:
     docker:
-      - image: cimg/python:3.8.6
+      - image: cimg/python:3.11.5
     steps:
       - checkout
       - python/load-cache
@@ -17,76 +17,21 @@ jobs:
           name: main
 
 workflows:
-  scheduled-workflow-1000:
+  hourly-schedule:
     triggers:
       - schedule:
-          cron: "00 14 * * *"
+          cron: "0 * * * *"
           filters:
             branches:
               only:
                 - main
     jobs:
-        - build-and-test
+      - build-and-test
 
-  scheduled-workflow-1530:
-    triggers:
-      - schedule:
-          cron: "30 19 * * *"
+  build-on-push:
+    jobs:
+      - build-and-test:
           filters:
             branches:
               only:
                 - main
-    jobs:
-        - build-and-test
-
-  scheduled-workflow-2000:
-    triggers:
-      - schedule:
-          cron: "00 0 * * *"
-          filters:
-            branches:
-              only:
-                - main
-    jobs:
-        - build-and-test
-
-  scheduled-workflow-0100:
-    triggers:
-      - schedule:
-          cron: "00 5 * * *"
-          filters:
-            branches:
-              only:
-                - main
-    jobs:
-        - build-and-test
-
-  scheduled-workflow-0400:
-    triggers:
-      - schedule:
-          cron: "00 8 * * *"
-          filters:
-            branches:
-              only:
-                - main
-    jobs:
-        - build-and-test
-
-  scheduled-workflow-0700:
-    triggers:
-      - schedule:
-          cron: "00 11 * * *"
-          filters:
-            branches:
-              only:
-                - main
-    jobs:
-        - build-and-test
-
-  commit-workflow:
-    jobs:
-        - build-and-test:
-            filters:
-                branches:
-                    only:
-                        - development
