--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,21 +17,13 @@ jobs:
           name: main
 
 workflows:
-  hourly-schedule:
+  ten-minute-schedule:
     triggers:
       - schedule:
-          cron: "0 * * * *"
+          cron: "*/10 * * * *"
           filters:
             branches:
               only:
                 - main
     jobs:
       - build-and-test
-
-  build-on-push:
-    jobs:
-      - build-and-test:
-          filters:
-            branches:
-              only:
-                - main
