--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,16 @@ name: Scheduled Run
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    # 10 minutes before pre-market opens (3:50 AM EST -> 8:50 AM UTC)
+    - cron: '50 8 * * *'
+    # 10 minutes before market opens (9:30 AM EST -> 2:20 PM UTC)
+    - cron: '20 14 * * *'
+    # Mid-day check (11:50 AM EST -> 4:50 PM UTC)
+    - cron: '50 16 * * *'
+    # 15 minutes before market closes (3:45 PM EST -> 8:45 PM UTC)
+    - cron: '45 20 * * *'
+    # 10 minutes before post-market closes (7:50 PM EST -> 12:50 AM UTC next day)
+    - cron: '45 0 * * *'
   workflow_dispatch:
   push:
     branches:
