--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,10 +2,10 @@ name: Scheduled Run
 
 on:
   schedule:
-    # 10 minutes before market opens (9:30 AM EST -> 2:20 PM UTC), Monday to Friday
-    - cron: '20 14 * * 1-5'
-    # Mid-day check (11:50 AM EST -> 4:50 PM UTC), Monday to Friday
-    - cron: '50 16 * * 1-5'
+    # Market Open (9:30 AM EST -> 2:30 PM UTC), Monday to Friday
+    - cron: '30 14 * * 1-5'
+    # Mid-day check (12:00 PM EST -> 5:00 PM UTC), Monday to Friday
+    - cron: '0 17 * * 1-5'
     # 15 minutes before market closes (3:45 PM EST -> 8:45 PM UTC), Monday to Friday
     - cron: '45 20 * * 1-5'
   workflow_dispatch:
