--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,57 @@
-numpy>=1.19.5
+aiohttp==3.9.1
+aiosignal==1.3.1
+alpaca-py==0.8.2
+appdirs==1.4.4
+attrs==23.2.0
+beautifulsoup4==4.12.3
+black==24.1.1
+bs4==0.0.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+cssselect==1.2.0
+et-xmlfile==1.1.0
+exchange-calendars==4.2.8
+fake-useragent==1.4.0
+frozenlist==1.4.1
+idna==3.6
+importlib-metadata==7.0.1
+korean-lunar-calendar==0.3.1
+lxml==5.1.0
+msgpack==1.0.7
+multidict==6.0.4
+multitasking==0.0.11
+mypy-extensions==1.0.0
+numpy==1.26.3
+openpyxl==3.1.2
+packaging==23.2
 pandas==1.3.5
-requests-html>=0.10.0
-ta>=0.7.0
-tqdm>=4.55.1
+pandas_market_calendars==4.3.3
+parse==1.20.0
+pathspec==0.12.1
+platformdirs==4.2.0
+pydantic==1.10.14
+pyee==8.2.2
+pyluach==2.2.0
+pyppeteer==1.0.2
+pyquery==2.0.0
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+pytz==2023.3.post1
+requests==2.31.0
+requests-html==0.10.0
+six==1.16.0
+slackclient==2.9.4
+soupsieve==2.5
+sseclient-py==1.8.0
+ta==0.11.0
+toolz==0.12.0
+tqdm==4.66.1
+typing_extensions==4.9.0
+urllib3==1.26.18
+w3lib==2.1.2
+websockets==10.4
+yarl==1.9.4
 yfinance==0.1.67
-openpyxl>=3.0.6
-slackclient>=2.9.4
-alpaca-py
-pandas_market_calendars
-python-dotenv
-colorama
+zipp==3.17.0
