--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,39 @@
-aiohttp==3.9.1
-aiosignal==1.3.1
-alpaca-py==0.8.2
-appdirs==1.4.4
-attrs==23.2.0
+alpaca-py==0.21.1
+annotated-types==0.6.0
+backtrader==1.9.78.123
 beautifulsoup4==4.12.3
-black==24.1.1
-bs4==0.0.2
-certifi==2023.11.17
+certifi==2024.2.2
 charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-cssselect==1.2.0
-et-xmlfile==1.1.0
-exchange-calendars==4.2.8
-fake-useragent==1.4.0
-frozenlist==1.4.1
-idna==3.6
-importlib-metadata==7.0.1
-korean-lunar-calendar==0.3.1
-lxml==5.1.0
-msgpack==1.0.7
-multidict==6.0.4
+contourpy==1.2.1
+cycler==0.12.1
+fonttools==4.51.0
+frozendict==2.4.4
+html5lib==1.1
+idna==3.7
+kiwisolver==1.4.5
+lxml==5.2.2
+matplotlib==3.9.0
+msgpack==1.0.8
 multitasking==0.0.11
-mypy-extensions==1.0.0
-numpy==1.26.3
-openpyxl==3.1.2
-packaging==23.2
-pandas==1.3.5
-pandas_market_calendars==4.3.3
-parse==1.20.0
-pathspec==0.12.1
-platformdirs==4.2.0
-pydantic==1.10.14
-pyee==8.2.2
-pyluach==2.2.0
-pyppeteer==1.0.2
-pyquery==2.0.0
-python-dateutil==2.8.2
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.2
+peewee==3.17.5
+pillow==10.3.0
+platformdirs==4.2.2
+pydantic==2.7.1
+pydantic_core==2.18.2
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz==2023.3.post1
+pytz==2024.1
 requests==2.31.0
-requests-html==0.10.0
 six==1.16.0
-slackclient==2.9.4
 soupsieve==2.5
 sseclient-py==1.8.0
-ta==0.11.0
-toolz==0.12.0
-tqdm==4.66.1
-typing_extensions==4.9.0
-urllib3==1.26.18
-w3lib==2.1.2
-websockets==10.4
-yarl==1.9.4
-yfinance==0.1.67
-zipp==3.17.0
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
+webencodings==0.5.1
+websockets==12.0
+yfinance==0.2.40
