--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,35 +5,21 @@ phases:
   #   commands:
   #     - pip install awscli
 
-  pre_build:
-    commands:
-      - REQUIREMENTS_CHANGED="false"
-      - if git diff --name-only $CODEBUILD_RESOLVED_SOURCE_VERSION $CODEBUILD_SOURCE_VERSION | grep -q "requirements.txt"; then
-          REQUIREMENTS_CHANGED="true"
-        fi
-
   build:
     commands:
       - zip lambda-function.zip lambda_function.py
-      - >
-        if [ "$REQUIREMENTS_CHANGED" = "true" ]; then
-          mkdir -p package/python
-          pip install --platform manylinux2014_aarch64 --target=package/python --implementation cp --python-version 3.11 --only-binary=:all: --upgrade -r requirements.txt
-          cd package
-          zip -r ../lambda-layer.zip .
-        fi
+      - mkdir -p package/python
+      - "pip install --platform manylinux2014_aarch64 --target=package/python --implementation cp --python-version 3.11 --only-binary=:all: --upgrade -r requirements.txt"
+      - cd package
+      - zip -r ../lambda-layer.zip .
 
   post_build:
     commands:
       - aws s3 cp lambda-function.zip s3://alpaca-trading-algo/lambda-function.zip
-      - if [ "$REQUIREMENTS_CHANGED" = "true" ]; then
-          aws s3 cp lambda-layer.zip s3://alpaca-trading-algo/lambda-layer.zip
-          LAYER_VERSION_ARN=$(aws lambda publish-layer-version --layer-name dependencies --description "Dependencies Layer" --content S3Bucket=alpaca-trading-algo,S3Key=lambda-layer.zip --compatible-runtimes python3.11 | jq -r ".LayerVersionArn")
-        fi
+      - aws s3 cp lambda-layer.zip s3://alpaca-trading-algo/lambda-layer.zip
+      - LAYER_VERSION_ARN=$(aws lambda publish-layer-version --layer-name dependencies --description "Dependencies Layer" --content S3Bucket=alpaca-trading-algo,S3Key=lambda-layer.zip --compatible-runtimes python3.11 | jq -r ".LayerVersionArn")
       - aws lambda update-function-code --function-name AlpacaTradingAlgo --s3-bucket alpaca-trading-algo --s3-key lambda-function.zip
-      - if [ "$REQUIREMENTS_CHANGED" = "true" ]; then
-          aws lambda update-function-configuration --function-name AlpacaTradingAlgo --layers $LAYER_VERSION_ARN
-        fi
+      - aws lambda update-function-configuration --function-name AlpacaTradingAlgo --layers $LAYER_VERSION_ARN
 
 artifacts:
   files:
