--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   build:
     commands:
-      - zip lambda-function.zip lambda_function.py
+      - zip lambda-function.zip *.py
       - mkdir -p package/python
       - "pip install --platform manylinux2014_aarch64 --target=package/python --implementation cp --python-version 3.11 --only-binary=:all: --upgrade -r requirements.txt"
       - cd package
