--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,8 +12,16 @@ phases:
 
   post_build:
     commands:
+      # Remove old artifacts from root
+      - aws s3 rm s3://alpaca-trading-algo/lambda-function.zip
+      - aws s3 rm s3://alpaca-trading-algo/lambda-layer.zip
+      # Remove old artifacts from BuildArtif and SourceArti directories
+      - aws s3 rm s3://alpaca-trading-algo/BuildArtif/ --recursive
+      - aws s3 rm s3://alpaca-trading-algo/SourceArti/ --recursive
+      # Upload new artifacts
       - aws s3 cp lambda-function.zip s3://alpaca-trading-algo/lambda-function.zip
       - aws s3 cp lambda-layer.zip s3://alpaca-trading-algo/lambda-layer.zip
+      # Update Lambda function code and configuration
       - aws lambda update-function-code --function-name AlpacaTradingAlgo --s3-bucket alpaca-trading-algo --s3-key lambda-function.zip
       - LAYER_VERSION_ARN=$(aws lambda publish-layer-version --layer-name dependencies --description "Dependencies Layer" --content S3Bucket=alpaca-trading-algo,S3Key=lambda-layer.zip --compatible-runtimes python3.11 | jq -r ".LayerVersionArn")
       - aws lambda update-function-configuration --function-name AlpacaTradingAlgo --layers $LAYER_VERSION_ARN
